tree-sitter-rdf11-turtle/test/corpus/w3c-test-suite-turtle.txt
===============
anonymous_blank_node_object
===============

<http://a.example/s> <http://a.example/p> [] .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (ANON)))))

===============
anonymous_blank_node_subject
===============

[] <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (triples
    (ANON)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
bareword_a_predicate
===============

<http://a.example/s> a <http://a.example/o> .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (objectList
        (IRIREF)))))

===============
bareword_decimal
===============

<http://a.example/s> <http://a.example/p> 1.0 .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (DECIMAL)))))

===============
bareword_double
===============

<http://a.example/s> <http://a.example/p> 1E0 .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (DOUBLE)))))

===============
bareword_integer
===============

<http://a.example/s> <http://a.example/p> 1 .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (INTEGER)))))

===============
blankNodePropertyList_as_object
===============

<http://a.example/s> <http://a.example/p> [ <http://a.example/p2> <http://a.example/o2> ] .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (blankNodePropertyList
          (predicateObjectList
            (IRIREF)
            (objectList
              (IRIREF))))))))

===============
blankNodePropertyList_as_subject
===============

[ <http://a.example/p> <http://a.example/o> ] <http://a.example/p2> <http://a.example/o2> .

---

(turtleDoc
  (triples
    (blankNodePropertyList
      (predicateObjectList
        (IRIREF)
        (objectList
          (IRIREF))))
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
blankNodePropertyList_containing_collection
===============

[ <http://a.example/p1> (1) ] .

---

(turtleDoc
  (triples
    (blankNodePropertyList
      (predicateObjectList
        (IRIREF)
        (objectList
          (collection
            (INTEGER)))))))

===============
blankNodePropertyList_with_multiple_triples
===============

[ <http://a.example/p1> <http://a.example/o1> ; <http://a.example/p2> <http://a.example/o2> ] <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (triples
    (blankNodePropertyList
      (predicateObjectList
        (IRIREF)
        (objectList
          (IRIREF))
        (IRIREF)
        (objectList
          (IRIREF))))
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
collection_object
===============

<http://a.example/s> <http://a.example/p> (1) .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (collection
          (INTEGER))))))

===============
collection_subject
===============

(1) <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (triples
    (collection
      (INTEGER))
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
comment_following_localName
===============

@prefix p: <http://a.example/> .
<http://a.example/s> <http://a.example/p> p:o#comment
.

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (PrefixedName)))
    (comment)))

===============
comment_following_PNAME_NS
===============

@prefix p: <http://a.example/> .
<http://a.example/s> <http://a.example/p> p:#comment
.

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (PrefixedName)))
    (comment)))

===============
default_namespace_IRI
===============

@prefix : <http://a.example/>.
:s <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
double_lower_case_e
===============

<http://a.example/s> <http://a.example/p> 1e0 .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (DOUBLE)))))

===============
empty_collection
===============

<http://a.example/s> <http://a.example/p> () .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (collection)))))

===============
first
===============

<http://a.example/s> <http://a.example/p> ((1) 2) .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (collection
          (collection
            (INTEGER))
          (INTEGER))))))

===============
HYPHEN_MINUS_in_localName
===============

@prefix p: <http://a.example/>.
p:s- <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
IRIREF_datatype
===============

<http://a.example/s> <http://a.example/p> "1"^^<http://www.w3.org/2001/XMLSchema#integer> .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_QUOTE)
          datatype_iri: (IRIREF))))))

===============
IRI_subject
===============

<http://a.example/s> <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
IRI_with_all_punctuation
===============

<scheme:!$%25&amp;'()*+,-./0123456789:/@ABCDEFGHIJKLMNOPQRSTUVWXYZ_abcdefghijklmnopqrstuvwxyz~?#> <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
IRI_with_eight_digit_numeric_escape
===============

<http://a.example/\U00000073> <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
IRI_with_four_digit_numeric_escape
===============

<http://a.example/\u0073> <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
labeled_blank_node_object
===============

<http://a.example/s> <http://a.example/p> _:o .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (BLANK_NODE_LABEL)))))

===============
labeled_blank_node_subject
===============

_:s <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (triples
    (BLANK_NODE_LABEL)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
labeled_blank_node_with_leading_digit
===============

<http://a.example/s> <http://a.example/p> _:0 .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (BLANK_NODE_LABEL)))))

===============
labeled_blank_node_with_leading_underscore
===============

<http://a.example/s> <http://a.example/p> _:_ .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (BLANK_NODE_LABEL)))))

===============
labeled_blank_node_with_non_leading_extras
===============

<http://a.example/s> <http://a.example/p> _:a·̀ͯ‿.⁀ .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (BLANK_NODE_LABEL)))))

===============
labeled_blank_node_with_PN_CHARS_BASE_character_boundaries
===============

<http://a.example/s> <http://a.example/p> _:AZazÀÖØöø˿ͰͽͿ῿‌‍⁰↏Ⰰ⿯、퟿豈﷏ﷰ�𐀀󯿽 .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (BLANK_NODE_LABEL)))))

===============
langtagged_LONG
===============

<http://a.example/s> <http://a.example/p> """chat"""@en .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_QUOTE)
          language_tag: (LANGTAG))))))

===============
langtagged_LONG_with_subtag
===============

# Test long literal with lang tag
@prefix :  <http://example.org/ex#> .
:a :b """Cheers"""@en-UK .

---

(turtleDoc
  (comment)
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (PrefixedName)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_QUOTE)
          language_tag: (LANGTAG))))))

===============
langtagged_non_LONG
===============

<http://a.example/s> <http://a.example/p> "chat"@en .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_QUOTE)
          language_tag: (LANGTAG))))))

===============
lantag_with_subtag
===============

<http://a.example/s> <http://a.example/p> "chat"@en-us .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_QUOTE)
          language_tag: (LANGTAG))))))

===============
last
===============

<http://a.example/s> <http://a.example/p> (1 (2)) .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (collection
          (INTEGER)
          (collection
            (INTEGER)))))))

===============
LITERAL1_all_controls
===============

<http://a.example/s> <http://a.example/p> '	' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
LITERAL1_all_punctuation
===============

<http://a.example/s> <http://a.example/p> ' !"#$%&():;<=>?@[]^_`{|}~' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
LITERAL1_ascii_boundaries
===============

<http://a.example/s> <http://a.example/p> '	&([]' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
LITERAL1
===============

<http://a.example/s> <http://a.example/p> 'x' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
LITERAL1_with_UTF8_boundaries
===============

<http://a.example/s> <http://a.example/p> '߿ࠀ࿿က쿿퀀퟿�𐀀𿿽񀀀󿿽􀀀􏿽' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
LITERAL2_ascii_boundaries
===============

<http://a.example/s> <http://a.example/p> "	!#[]" .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_QUOTE))))))

===============
LITERAL2
===============

<http://a.example/s> <http://a.example/p> "x" .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_QUOTE))))))

===============
LITERAL2_with_UTF8_boundaries
===============

<http://a.example/s> <http://a.example/p> "߿ࠀ࿿က쿿퀀퟿�𐀀𿿽񀀀󿿽􀀀􏿽" .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_QUOTE))))))

===============
literal_false
===============

<http://a.example/s> <http://a.example/p> false .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (BooleanLiteral)))))

===============
LITERAL_LONG1_ascii_boundaries
===============

<http://a.example/s> <http://a.example/p> '&([]' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
LITERAL_LONG1
===============

<http://a.example/s> <http://a.example/p> '''x''' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_SINGLE_QUOTE))))))

===============
LITERAL_LONG1_with_1_squote
===============

<http://a.example/s> <http://a.example/p> '''x'y''' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_SINGLE_QUOTE))))))

===============
LITERAL_LONG1_with_2_squotes
===============

<http://a.example/s> <http://a.example/p> '''x''y''' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_SINGLE_QUOTE))))))

===============
LITERAL_LONG1_with_UTF8_boundaries
===============

<http://a.example/s> <http://a.example/p> '''߿ࠀ࿿က쿿퀀퟿�𐀀𿿽񀀀󿿽􀀀􏿽''' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_SINGLE_QUOTE))))))

===============
LITERAL_LONG2_ascii_boundaries
===============

<http://a.example/s> <http://a.example/p> "!#[]" .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_QUOTE))))))

===============
LITERAL_LONG2
===============

<http://a.example/s> <http://a.example/p> """x""" .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_QUOTE))))))

===============
LITERAL_LONG2_with_1_squote
===============

<http://a.example/s> <http://a.example/p> """x"y""" .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_QUOTE))))))

===============
LITERAL_LONG2_with_2_squotes
===============

<http://a.example/s> <http://a.example/p> """x""y""" .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_QUOTE))))))

===============
LITERAL_LONG2_with_REVERSE_SOLIDUS
===============

@prefix : <http://example.org/ns#> .

:s :p1 """test-\\""" .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (PrefixedName)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_QUOTE))))))

===============
LITERAL_LONG2_with_UTF8_boundaries
===============

<http://a.example/s> <http://a.example/p> """߿ࠀ࿿က쿿퀀퟿�𐀀𿿽񀀀󿿽􀀀􏿽""" .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_QUOTE))))))

===============
literal_true
===============

<http://a.example/s> <http://a.example/p> true .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (BooleanLiteral)))))

===============
literal_with_BACKSPACE
===============

<http://a.example/s> <http://a.example/p> '' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
literal_with_CARRIAGE_RETURN
===============

<http://a.example/s> <http://a.example/p> '''''' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_SINGLE_QUOTE))))))

===============
literal_with_CHARACTER_TABULATION
===============

<http://a.example/s> <http://a.example/p> '	' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
literal_with_escaped_BACKSPACE
===============

<http://a.example/s> <http://a.example/p> '\b' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
literal_with_escaped_CARRIAGE_RETURN
===============

<http://a.example/s> <http://a.example/p> '\r' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
literal_with_escaped_CHARACTER_TABULATION
===============

<http://a.example/s> <http://a.example/p> '\t' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
literal_with_escaped_FORM_FEED
===============

<http://a.example/s> <http://a.example/p> '\f' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
literal_with_escaped_LINE_FEED
===============

<http://a.example/s> <http://a.example/p> '\n' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
literal_with_FORM_FEED
===============

<http://a.example/s> <http://a.example/p> '' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
literal_with_LINE_FEED
===============

<http://a.example/s> <http://a.example/p> '''
''' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_LONG_SINGLE_QUOTE))))))

===============
literal_with_numeric_escape4
===============

<http://a.example/s> <http://a.example/p> '\u006F' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
literal_with_numeric_escape8
===============

<http://a.example/s> <http://a.example/p> '\U0000006F' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
literal_with_REVERSE_SOLIDUS
===============

<http://a.example/s> <http://a.example/p> '\\' .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_SINGLE_QUOTE))))))

===============
localName_with_assigned_nfc_bmp_PN_CHARS_BASE_character_boundaries
===============

@prefix p: <http://a.example/> .
<http://a.example/s> <http://a.example/p> p:AZazÀÖØöø˿Ͱͽ΄῾‌‍⁰↉Ⰰ⿕、ퟻ﨎ﷇﷰ￯ .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (PrefixedName)))))

===============
localName_with_assigned_nfc_PN_CHARS_BASE_character_boundaries
===============

@prefix p: <http://a.example/> .
<http://a.example/s> <http://a.example/p> p:AZazÀÖØöø˿Ͱͽ΄῾‌‍⁰↉Ⰰ⿕、ퟻ﨎ﷇﷰ￯𐀀󠇯 .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (PrefixedName)))))

===============
localname_with_COLON
===============

@prefix p: <http://a.example/>.
p:s: <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
localName_with_leading_digit
===============

@prefix p: <http://a.example/>.
p:0 <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
localName_with_leading_underscore
===============

@prefix p: <http://a.example/>.
p:_ <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
localName_with_nfc_PN_CHARS_BASE_character_boundaries
===============

@prefix p: <http://a.example/> .
<http://a.example/s> <http://a.example/p> p:AZazÀÖØöø˿ͰͽͿ῿‌‍⁰↏Ⰰ⿯、퟿﨎﷏ﷰ￯𐀀󯿽 .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (PrefixedName)))))

===============
localName_with_non_leading_extras
===============

@prefix p: <http://a.example/>.
p:a·̀ͯ‿.⁀ <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
negative_numeric
===============

<http://a.example/s> <http://a.example/p> -1 .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (INTEGER)))))

===============
nested_blankNodePropertyLists
===============

[ <http://a.example/p1> [ <http://a.example/p2> <http://a.example/o2> ] ; <http://a.example/p> <http://a.example/o> ].

---

(turtleDoc
  (triples
    (blankNodePropertyList
      (predicateObjectList
        (IRIREF)
        (objectList
          (blankNodePropertyList
            (predicateObjectList
              (IRIREF)
              (objectList
                (IRIREF)))))
        (IRIREF)
        (objectList
          (IRIREF))))))

===============
nested_collection
===============

<http://a.example/s> <http://a.example/p> ((1)) .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (collection
          (collection
            (INTEGER)))))))

===============
number_sign_following_localName
===============

@prefix p: <http://a.example/> .
<http://a.example/s> <http://a.example/p> p:o\#numbersign
.

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (PrefixedName)))))

===============
number_sign_following_PNAME_NS
===============

@prefix p: <http://a.example/>.
<http://a.example/s> <http://a.example/p> p:\#numbersign
.

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (PrefixedName)))))

===============
numeric_with_leading_0
===============

<http://a.example/s> <http://a.example/p> 01 .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (INTEGER)))))

===============
objectList_with_two_objects
===============

<http://a.example/s> <http://a.example/p> <http://a.example/o1>, <http://a.example/o2> .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)
        (IRIREF)))))

===============
old_style_base
===============

@base <http://a.example/>.
<s> <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (base
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
old_style_prefix
===============

@prefix p: <http://a.example/>.
p:s <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
percent_escaped_localName
===============

@prefix p: <http://a.example/>.
p:%25 <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
positive_numeric
===============

<http://a.example/s> <http://a.example/p> +1 .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (INTEGER)))))

===============
predicateObjectList_with_two_objectLists
===============

<http://a.example/s> <http://a.example/p1> <http://a.example/o1>; <http://a.example/p2> <http://a.example/o2> .

---

(turtleDoc
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF))
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
prefixed_IRI_object
===============

@prefix p: <http://a.example/>.
<http://a.example/s> <http://a.example/p> p:o .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (PrefixedName)))))

===============
prefixed_IRI_predicate
===============

@prefix p: <http://a.example/>.
<http://a.example/s> p:p <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (PrefixedName)
      (objectList
        (IRIREF)))))

===============
prefixed_name_datatype
===============

@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
<http://a.example/s> <http://a.example/p> "1"^^xsd:integer .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (IRIREF)
    (predicateObjectList
      (IRIREF)
      (objectList
        (RDFLiteral
          string: (STRING_LITERAL_QUOTE)
          datatype_iri: (PrefixedName))))))

===============
prefix_only_IRI
===============

@prefix p: <http://a.example/s>.
p: <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
prefix_reassigned_and_used
===============

@prefix p: <http://a.example/>.
@prefix p: <http://b.example/>.
p:s <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
prefix_with_non_leading_extras
===============

@prefix a·̀ͯ‿.⁀: <http://a.example/>.
a·̀ͯ‿.⁀:s <http://a.example/p> <http://a.example/o> .

---

(turtleDoc
  (directive
    (prefix
      prefix_label: (PNAME_NS)
      iri: (IRIREF)))
  (triples
    (PrefixedName)
    (predicateObjectList
      (IRIREF)
      (objectList
        (IRIREF)))))

===============
prefix_with_PN_CHARS_BASE_character_boundaries
===============
